[workspace]
resolver = "2"
members = [
  './app/basic_security_validation/',
  './app/deserialize_instruction_data/',
  './app/state-management/',
  './app/program_derived_address/',
  "crates/*",
]

[workspace.dependencies]
solana-program = "^1.18"
solana-client = "^1.18"
solana-sdk = "^1.18"
solana-transaction-status = "^1.18"
solana-account-decoder = "^1.18"
spl-token = "^4"
dotenv = "0.15"
anyhow = "1.0.94"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.125"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "local-time",
] }
