[workspace]
resolver = "2"
members = [
  './app/basic_security_validation/',
  './app/deserialize_instruction_data/',
  './app/state-management/',
  './app/program_derived_address/',
  "crates/*",
]

[workspace.dependencies]
solana-program = "^2.1.8"
solana-client = "^2.1.8"
solana-sdk = "^2.1.8"
solana-transaction-status = "^2.1.8"
solana-account-decoder = "^2.1.8"
mpl-token-metadata = "5.1.0"
spl-token = "^7.0.0"
dotenv = "0.15"
bs58 = "0.5.1"
anyhow = "1.0.95"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "local-time",
] }
