[package]
name = "basic_security_validaton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.17.14"
ahash = "=0.8.6"
borsh = { version = "1.3.1", features = ["derive"] }
thiserror = "1.0.56"

[lib]
name = "basic_security_validaton"
crate-type = ["cdylib", "lib"]
