[package]
name = "deserialize_instruction_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.18.10"
ahash = "0.8.11"
borsh = { version = "1.3.1", features = ["derive"] }

[lib]
name = "deserialize_instruction_data"
crate-type = ["cdylib", "lib"]
