[package]
name = "state_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "2.1.8"
ahash = "0.8.11"
borsh = { version = "1.3.1", features = ["derive"] }

[lib]
name = "state_management"
crate-type = ["cdylib", "lib"]
