[package]
name = "raydium_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk.workspace = true
solana-program.workspace = true
solana-client.workspace = true
solana-account-decoder.workspace = true
spl-token.workspace = true
solana-transaction-status.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio = { version = "1.39.2", features = ["full"] }
dotenv = "0.15.0"
bs58 = "0.5.1"
mpl-token-metadata = "4.1.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
borsh = "1.5.1"
serde_json = "1.0.125"
thiserror = "1.0.63"
