[package]
name = "raydium_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk.workspace = true
solana-program.workspace = true
solana-client.workspace = true
solana-account-decoder.workspace = true
spl-token.workspace = true
solana-transaction-status.workspace = true
anyhow.workspace = true
serde.workspace = true
tokio = { version = "1.39.2", features = ["full"] }
dotenv.workspace = true
bs58.workspace = true
mpl-token-metadata.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
borsh = "1.5.1"
serde_json.workspace = true
thiserror = "2.0.6"
utils = { path = "../utils" }
