[package]
name = "solana_toolkits"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[dependencies]
solana-sdk.workspace = true
solana-program.workspace = true
solana-client.workspace = true
solana-account-decoder.workspace = true
spl-token.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
serde_json.workspace = true
utils = { path = "../utils" }
tokio = { version = "1.39.2", features = ["full"] }
