[package]
name = "solana_toolkits"
version = "0.1.0"
authors = ["Etcetera<etcetera3636@gmail.com>"]
edition = "2021"

[dependencies]
solana-sdk.workspace = true
solana-program.workspace = true
solana-client.workspace = true
solana-account-decoder.workspace = true
spl-token.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
serde_json.workspace = true
utils = { path = "../utils" }
tokio = { version = "1.39.2", features = ["full"] }

[[example]]
name = "closeable_accounts"
path = "examples/closeable_accounts.rs"

[[example]]
name = "batch_close_token_accounts"
path = "examples/batch_close_token_accounts.rs"
