[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
dotenv.workspace = true
tracing.workspace = true
spl-token.workspace = true
solana-sdk.workspace = true
solana-client.workspace = true
serde_json.workspace = true
thiserror.workspace = true
mpl-token-metadata.workspace = true
tracing-subscriber = { workspace = true, features = [
  "json",
  "env-filter",
  "local-time",
] }
time = { version = "0.3", features = ["macros"] }
